Version 0.4.8.2 Beta