@@ -28,7 +28,9 @@ javafx {
 
 dependencies {
 
+	// implementation group: 'org.json', name: 'json', version: '20190722'
 	implementation group: 'org.jsoup', name: 'jsoup', version: '1.13.1'
+	// implementation group: 'com.google.code.gson', name: 'gson', version: '2.8.6'
 
 	implementation group: 'org.mozilla', name: 'rhino', version: '1.7.12'
 
@@ -59,6 +61,8 @@ compileJava {
 		]
 	}
 }
+
+//"--add-exports javafx.graphics/com.sun.javafx.util=org.beuwi.simulator --add-exports javafx.graphics/com.sun.javafx.scene.input=org.beuwi.simulator --add-exports javafx.graphics/com.sun.javafx.css=org.beuwi.simulator --add-exports javafx.graphics/com.sun.javafx.iio=org.beuwi.simulator"
 
 run {
 	jvmArgs '--add-exports=javafx.graphics/javafx.scene.layout=org.beuwi.simulator'
